objects/Development_Deliverable__c.object
<CustomObject>
    <description>Child object of Customer Design Specification Object used for section Development Deliverable
 in CDS form</description>
    <fields>
        <fullName>Custom_Design_Specification__c</fullName>
        <label>Custom Design Specification</label>
        <referenceTo>Custom_Design__c</referenceTo>
        <relationshipLabel>Development Deliverables</relationshipLabel>
        <relationshipName>Development_Deliverables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description_Development_Deliverables__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Development_Deliverables__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Development_Deliverables__c</fullName>
        <label>Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size_Cells__c</fullName>
        <label>Size (Cells)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Development_Deliverables__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Circuit Element,Compilable</fullName>
                </value>
                <value>
                    <fullName>Core - Analog Hard</fullName>
                </value>
                <value>
                    <fullName>Core - Digital Hard</fullName>
                </value>
                <value>
                    <fullName>Core - Soft</fullName>
                </value>
                <value>
                    <fullName>Core - Synthesizable</fullName>
                </value>
                <value>
                    <fullName>eDRAM</fullName>
                </value>
                <value>
                    <fullName>Interface Circuit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Development Deliverable</label>
    <listViews>
        <fullName>CDS_Development_Deliverables</fullName>
        <columns>Custom_Design_Specification__c</columns>
        <columns>NAME</columns>
        <columns>Description_Development_Deliverables__c</columns>
        <columns>Name_Development_Deliverables__c</columns>
        <columns>Type_Development_Deliverables__c</columns>
        <columns>Quantity_Development_Deliverables__c</columns>
        <columns>Size_Cells__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/23/2017 12:00 AM</value>
        </filters>
        <label>CDS - Development Deliverables</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>DD-{000000}</displayFormat>
        <label>Development Deliverables Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Development Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>